Fix language selector on mobile

--- a/src/static/css/2019.css
+++ b/src/static/css/2019.css
@@ -846,6 +846,7 @@ p.copyright a {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    margin-bottom: 2rem;
   }
 
   /* Footer */
